--- a/mod3_solution/index.html
+++ b/mod3_solution/index.html
@@ -61,6 +61,7 @@
           <div class="category-tile">
               <span>Chicken</span>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis odio nisl. Nunc a lectus in ex viverra laoreet. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean in fringilla magna. Cras ut dignissim purus. Etiam odio nibh, posuere at nisl ut, consequat commodo dui. Quisque euismod fermentum ante non luctus. Vivamus ut erat id neque euismod iaculis. Nam sed rutrum metus. Vestibulum non nisl eget nisl interdum iaculis.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis odio nisl. Nunc a lectus in ex viverra laoreet. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean in fringilla magna. Cras ut dignissim purus. Etiam odio nibh, posuere at nisl ut, consequat commodo dui. Quisque euismod fermentum ante non luctus. Vivamus ut erat id neque euismod iaculis. Nam sed rutrum metus. Vestibulum non nisl eget nisl interdum iaculis          
+          <a class="bttLink" href="#OurMenu">Back to top</a>
           </div>
       </div>
         <div class="col-md-4 col-sm-6 col-xs-12">
@@ -68,6 +69,7 @@
             <div class="category-tile">
                 <span>Beef</span>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis odio nisl. Nunc a lectus in ex viverra laoreet. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean in fringilla magna. Cras ut dignissim purus. Etiam odio nibh, posuere at nisl ut, consequat commodo dui. Quisque euismod fermentum ante non luctus. Vivamus ut erat id neque euismod iaculis. Nam sed rutrum metus. Vestibulum non nisl eget nisl interdum iaculis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis odio nisl. Nunc a lectus in ex viverra laoreet. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean in fringilla magna. Cras ut dignissim purus. Etiam odio nibh, posuere at nisl ut, consequat commodo dui. Quisque euismod fermentum ante non luctus. Vivamus ut erat id neque euismod iaculis. Nam sed rutrum metus. Vestibulum non nisl eget nisl interdum iaculis
+                <a class="bttLink" href="#OurMenu">Back to top</a>
             </div>
 
         </div>
@@ -76,6 +78,7 @@
             <div class="category-tile">
                 <span>Sushi</span>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis odio nisl. Nunc a lectus in ex viverra laoreet. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean in fringilla magna. Cras ut dignissim purus. Etiam odio nibh, posuere at nisl ut, consequat commodo dui. Quisque euismod fermentum ante non luctus. Vivamus ut erat id neque euismod iaculis. Nam sed rutrum metus. Vestibulum non nisl eget nisl interdum iaculis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis odio nisl. Nunc a lectus in ex viverra laoreet. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean in fringilla magna. Cras ut dignissim purus. Etiam odio nibh, posuere at nisl ut, consequat commodo dui. Quisque euismod fermentum ante non luctus. Vivamus ut erat id neque euismod iaculis. Nam sed rutrum metus. Vestibulum non nisl eget nisl interdum iaculis
+                <a class="bttLink" href="#OurMenu">Back to top</a>
             </div>
         </div>
     </section>
