--- a/mod3_solution/index.html
+++ b/mod3_solution/index.html
@@ -53,7 +53,7 @@
 
 
   <div id="main-content" class="container">
-    <h2 id="menu-categories-title" class="text-center">Our Menu</h2>
+    <h2 id="OurMenu" class="text-center">Our Menu</h2>
 
     <section class="row">
       <div class="col-md-4 col-sm-6 col-xs-12">
