--- a/AngularJS/mod1_solution/index.html
+++ b/AngularJS/mod1_solution/index.html
@@ -21,6 +21,7 @@
 
          <div class="form-group">
            <!--I do NOT consider empty items-->
+             <label for="lunch-menu">NOT considering empty items</label>
              <input id="lunch-menu" type="text" ng-model="lunchmenu"
              placeholder="list comma separated dishes you usually have for lunch"
              class="form-control lunch-menu-{{selectedcss}}"> 
