--- a/AngularJS/mod2_solution/index.html
+++ b/AngularJS/mod2_solution/index.html
@@ -26,7 +26,7 @@
   </head>
 <body>
   <div class="container">
-  <h1>Shopping List Check Offhhhhhhhh</h1>
+  <h1>Shopping List Check Off</h1>
 
   <div class="row" ng-controller="ToBuyController as toBuy">
 
