--- a/AngularJS/mod3_solution/index.html
+++ b/AngularJS/mod3_solution/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <link rel="stylesheet" href="styles/styles.css">
-      <script src="Scripts/angular.min.js"></script>
-      <script src="Scripts/app.js"></script>
+      <script src="scripts/angular.min.js"></script>
+      <script src="scripts/app.js"></script>
   </head>
 <body ng-app="NarrowItDownApp">
    <div class="container" ng-controller="NarrowItDownController as menu">
