--- a/AngularJS/mod3_solution/index.html
+++ b/AngularJS/mod3_solution/index.html
@@ -9,29 +9,29 @@
       <script src="scripts/app.js"></script>
   </head>
 <body ng-app="NarrowItDownApp">
-   <div class="container" ng-controller="NarrowItDownController as menu">
+   <div class="container" ng-controller="NarrowItDownController as list">
     <h1>Narrow Down Your Chinese Menu Choice</h1>
 
     <div class="form-group">
-      <input type="text" placeholder="search term" class="form-control" ng-model="menu.searchTerm">
+      <input type="text" placeholder="search term" class="form-control" ng-model="list.searchTerm">
     </div>
     <div class="form-group narrow-button">
-      <button class="btn btn-primary" ng-click="menu.getMatchedMenuItems();">Narrow It Down For Me!</button>
+      <button class="btn btn-primary" ng-click="list.getMatchedMenuItems();">Narrow It Down For Me!</button>
     </div>
     
-       <div class="results" >
+       <!--<div class="results" >
            <ul>
-               <li ng-repeat="menu_item in menu.menu_item">
+               <li ng-repeat="item in list.items">
 
-                   ({{menu_item.short_name}}) - {{menu_item.name }} - {{menu_item.description}}
-                   <button ng-click="menu.Remove({$index});">Don't want this one!</button>
+                   ({{item.short_name}}) - {{item.name }} - {{item.description}}
+                   <button ng-click="item.removeItem($index);">Don't want this one!</button>
                </li>
 
            </ul>
-           <div class="error" ng-if="menu.nothingFoundInList()">Nothing found!</div>
-       </div>
+           <div class="error" ng-if="list.nothingFoundInList();">Nothing found!</div>
+       </div>-->
     <!-- found-items should be implemented as a component -->
-    <found-items my-list="menu" remove="menu.Remove();"></found-items>
+    <found-items items="list.items" on-remove="list.removeItem(index)"></found-items>
   </div>
 
 </body>
